Commit from Dualite Alpha:

--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23a855f7' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='m12 3-1.9 3.8-3.8 1.9 3.8 1.9L12 14.4l1.9-3.8 3.8-1.9-3.8-1.9L12 3zM5 8l-1.4 2.8L1 9.4l2.6 1.6L5 13.8l1.4-2.8L9 9.4l-2.6-1.6L5 8zm14 4-1.4 2.8L15 13.4l2.6 1.6L19 17.8l1.4-2.8L23 13.4l-2.6-1.6L19 12z'/%3e%3c/svg%3e" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SnapEdit - Professional Image Editor</title>
-    <meta name="description" content="Edit screenshots and images with ease. Add text, shapes, and modify any element in your images. Professional editing tools with sharing capabilities." />
+    <title>SnapEdit - AI Powered Image Editor</title>
+    <meta name="description" content="Instantly edit text in any image with AI. SnapEdit is a powerful, futuristic image editor that lets you modify text, replace elements, and enhance your visuals with cutting-edge technology." />
     <meta name="author" content="SnapEdit" />
 
-    <meta property="og:title" content="SnapEdit - Professional Image Editor" />
-    <meta property="og:description" content="Edit screenshots and images with ease. Add text, shapes, and modify any element in your images." />
+    <meta property="og:title" content="SnapEdit - AI Powered Image Editor" />
+    <meta property="og:description" content="Instantly edit text in any image with AI. A powerful, futuristic editor to modify text and enhance visuals." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/favicon.ico" />
+    <meta property="og:image:alt" content="A preview of the SnapEdit AI image editor interface, showing an image being edited."/>
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@SnapEdit" />
+    <meta name="twitter:title" content="SnapEdit - AI Powered Image Editor" />
+    <meta name="twitter:description" content="Instantly edit text in any image with AI. A powerful, futuristic editor to modify text and enhance visuals." />
     <meta name="twitter:image" content="/favicon.ico" />
   </head>
 
